Populate display when numbers are pressed

--- a/index.html
+++ b/index.html
@@ -31,48 +31,62 @@
 
         .calculator {
             display: flex;
-            gap: 20px;
+            gap: 20px;            
+        }
+
+        .container {
+            align-items: center;
         }
 
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="display">999999999</div>
+        <div class="display"> </div>
         <div class="calculator">
             <div class="operators">
-                <button>add</button>
-                <button>subtract</button>
-                <button>multiply</button>
-                <button>divide</button>
+                <button id="add">add</button>
+                <button id="subtract">subtract</button>
+                <button id="multiply">multiply</button>
+                <button id="divide">divide</button>
                 <button class="clear">clear</button>
             </div>
             <div class="pad">
                 <div class="calculator-row">
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
+                    <button id="7">7</button>
+                    <button id="8">8</button>
+                    <button id="9">9</button>
                 </div>
                 <div class="calculator-row">
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
+                    <button id="4">4</button>
+                    <button id="5">5</button>
+                    <button id="6">6</button>
                 </div>
                 <div class="calculator-row">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
+                    <button id="1">1</button>
+                    <button id="2">2</button>
+                    <button id="3">3</button>
                 </div>
                 <div class="calculator-row">
-                    <button>0</button>
-                    <button>.</button>
-                    <button>=</button>
+                    <button id="0">0</button>
+                    <button id="dec">.</button>
+                    <button id="eq">=</button>
                 </div>
             </div>
         </div>
     </div>
 
     <script>
+
+        // Update display when numbers are pressed
+        let numbers = document.querySelectorAll('.pad button');
+        let display = document.querySelector('.display');
+        numbers.forEach(number => number.addEventListener('click', e => {
+            let input = e.target.textContent;
+            display.textContent += input;
+        }));
+
+        
 
         // // create calculator grid
         // let calculator = document.createElement('div')
