--- a/index.html
+++ b/index.html
@@ -108,7 +108,41 @@
         }
 
         // Run calculation when = is pressed
+        let equal = document.querySelector('#eq')
+        equal.addEventListener('click', () => {
+            let [a, op, b] = display.textContent.split(' ');
+            let result = operate(a, b, op);
+            display.textContent = `${result}`
+        })
 
+        function add(a, b) {
+            return Number(a) + Number(b);
+        }
+
+        function subtract(a, b) {
+            return a - b;
+        }
+
+        function multiply(a, b) {
+            return a * b;
+        }
+
+        function divide(a, b) {
+            return a / b;
+        }
+
+        function operate(a, b, operator) {
+            switch (true) {
+                case (operator === '+'):
+                    return add(a, b)
+                case (operator === '-'):
+                    return subtract(a, b)
+                case (operator === '*'):
+                    return multiply(a, b)
+                case (operator === '/'):
+                    return divide(a, b)
+            }
+        }
     </script>
 </body>
 </html>
