--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
     <style>
 
         body {
-            font-family: Arial, Helvetica, sans-serif; 
+            font-family: 'Roboto', sans-serif;
+            background-color: #1F2937;
+            color: #F9FAF8;
         }
 
         button {
             width: 90px;
             height: 70px;
+            background-color: #1F2937;
+            color: #F9FAF8;
+            border: 1px solid white;
+            border-radius: 10px;
+            font-size: 15px;
         }
         
         .pad, .operators, .container {
@@ -24,7 +34,7 @@
 
         .display {
             border-radius: 10px;
-            border: 1px solid black;
+            border: 1px solid #F9FAF8;
             padding: 10px;
             width: 500px;
         }
