Convert operators into symbols

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class="display"></div>
         <div class="calculator">
             <div class="operators">
-                <button class="operator" id="add">add</button>
-                <button class="operator" id="subtract">subtract</button>
-                <button class="operator" id="multiply">multiply</button>
-                <button class="operator" id="divide">divide</button>
+                <button class="operator" id="add">&#43</button>
+                <button class="operator" id="subtract">&#8722</button>
+                <button class="operator" id="multiply">&#215</button>
+                <button class="operator" id="divide">&#247</button>
                 <button class="clear">clear</button>
             </div>
             <div class="pad">
