--- a/index.html
+++ b/index.html
@@ -36,16 +36,24 @@
             border-radius: 10px;
             border: 1px solid #F9FAF8;
             padding: 10px;
-            width: 500px;
+            min-height: 20px;
+            /* width: 500px; */
+        }
+
+        .display, .calculator {
+            width: 400px;
         }
 
         .calculator {
             display: flex;
-            gap: 20px;            
+            gap: 20px;     
+            justify-content: space-between;       
         }
 
         .container {
             align-items: center;
+            justify-content: center;
+            /* width: 500px; */
         }
 
     </style>
