Disable decimal button if it's already been used for input

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 
         // Update display when numbers are pressed
         function displayNums(e) {
+            if (display.textContent.includes('.') && e.target.textContent === '.') {
+                return
+            }
             if (overwrite) {
                 display.textContent = ''
                 overwrite = false
