Throw error if divide by 0

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         }
 
         function divide(a, b) {
+            if (b === '0') return 'divide by 0 error'
             return a / b;
         }
 
