--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         .container {
             align-items: center;
             justify-content: center;
+            padding: 50px;
         }
 
         .active {
@@ -98,6 +99,7 @@
                 </div>
             </div>
         </div>
+        <footer style="margin-top: auto;">David Lin 2022</footer>
     </div>
 
     <script>
