Move CSS and javascript to style.css and javascript.js

--- a/index.html
+++ b/index.html
@@ -7,71 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Document</title>
-    <style>
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #1F2937;
-            color: #F9FAF8;
-        }
-
-        button {
-            width: 90px;
-            height: 70px;
-            background-color: #1F2937;
-            color: #F9FAF8;
-            border: 1px solid white;
-            border-radius: 10px;
-            font-size: 25px;
-        }
-
-        /* .operator:hover {
-            background-color: black;
-        } */
-        
-        .pad, .operators, .container {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .display {
-            border-radius: 10px;
-            border: 1px solid #F9FAF8;
-            padding: 10px;
-            min-height: 20px;
-        }
-
-        .display, .calculator {
-            width: 400px;
-        }
-
-        .calculator {
-            display: flex;
-            gap: 20px;     
-            justify-content: space-between;      
-        }
-
-        .container {
-            align-items: center;
-            justify-content: center;
-            padding: 50px;
-        }
-
-        .active {
-            background-color: #388;
-        }
-
-        footer {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            /* font-size: 20px; */
-            margin-top: 40px;
-        }
-
-    </style>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -117,117 +54,6 @@
         </footer>
     </div>
 
-    <script>
-        let firstNum;
-        let secondNum;
-        let operator;
-        let overwrite = false;
-        let operatorActive = false;
-
-        // Update display when numbers are pressed
-        function displayNums(e) {
-            // disable . button if already pressed
-            if (display.textContent.includes('.') && e.target.textContent === '.') {
-                return
-            }
-            if (overwrite) {
-                display.textContent = ''
-                document.getElementById(`${operator}`).classList.remove('active')
-                overwrite = falseq
-            }
-            display.textContent += e.target.textContent;
-        };
-        let display = document.querySelector('.display');
-        let numbers = Array.from(document.querySelectorAll('.pad button'));
-        numbers.filter(number => number.textContent !== '=').forEach(number => (
-            number.addEventListener('click', displayNums)
-        ));
-
-        // Clear display when clear button is pressed
-        document.querySelector('.clear').addEventListener('click', () => {
-            display.textContent = '';
-            overwrite = false;
-            operatorActive = false;
-            firstNum = null;
-            secondNum = null;
-            operator = null;
-            buttons.forEach(button => button.classList.remove('active'))
-        })
-
-        function applyOperator(e) {
-            // Run calculation if operator is already active
-            if (operatorActive) {
-                secondNum = display.textContent;
-                display.textContent = `${operate(firstNum, secondNum, operator)}`
-                // remove highlight on previous operator
-                document.getElementById(`${operator}`).classList.remove('active')
-            }
-            firstNum = display.textContent;
-            operator = e.target.id;
-            overwrite = true;
-            operatorActive = true;
-            e.target.classList.add('active')
-        }
-        let buttons = document.querySelectorAll('.operator')
-        buttons.forEach(button => button.addEventListener('click', applyOperator))
-
-        // Run calculation when = is pressed 
-        let equal = document.querySelector('#eq')
-        equal.addEventListener('click', () => {
-            if (firstNum === null) {
-                return
-            }
-            secondNum = display.textContent
-            display.textContent = `${operate(firstNum, secondNum, operator)}`
-            document.getElementById(`${operator}`).classList.remove('active')
-            overwrite = false
-            operatorActive = false
-            firstNum = null;
-        }) 
-
-        // animate buttons
-        function animateButton(e) {
-            if (e.type === 'mousedown') {
-                e.target.style.backgroundColor = '#388'
-            } else {
-                e.target.style.backgroundColor = ''
-            }
-        }
-
-        numbers.forEach(number => number.addEventListener('mousedown', animateButton))
-        numbers.forEach(number => number.addEventListener('mouseup', animateButton))
-        document.querySelector('.clear').addEventListener('mousedown', animateButton)
-        document.querySelector('.clear').addEventListener('mouseup', animateButton)
-
-        function add(a, b) {
-            return Number(a) + Number(b);
-        }
-
-        function subtract(a, b) {
-            return a - b;
-        }
-
-        function multiply(a, b) {
-            return a * b;
-        }
-
-        function divide(a, b) {
-            if (b === '0') return 'divide by 0 error'
-            return a / b;
-        }
-
-        function operate(a, b, operator) {
-            switch (true) {
-                case (operator === '+'):
-                    return add(a, b)
-                case (operator === '-'):
-                    return subtract(a, b)
-                case (operator === '*'):
-                    return multiply(a, b)
-                case (operator === '/'):
-                    return divide(a, b)
-            }
-        }
-    </script>
+    <script src="javascript.js"></script>
 </body>
 </html>
